syntax = "proto3";
package attendance.service;

option java_multiple_files = true;
option java_package = "dev.ngdangkiet.dkmicroservices.attendance.protobuf";
option java_outer_classname = "AttendanceProtobuf";

message PAttendanceRecord {
  int64 id = 1;
  int64 employee_id = 2;
  string attendance_date = 3;
  string check_in_time = 4;
  string check_out_time = 5;
  double work_hours = 6;
  string work_time = 7;
  string status = 8;
  string date_type = 9;
}

message PLeaveRequest {
  int64 id = 1;
  int64 employee_id = 2;
  string leave_type = 3;
  string start_date = 4;
  string end_date = 5;
  string status = 6;
  string reason = 7;
  int64 receiver_id = 8;
}

message PGetAttendanceRecordsRequest {
  int64 employee_id = 1;
  int32 week_of_month = 2;
  int32 month = 3;
  int32 year = 4;
}

message PGetAttendanceRecordsResponse {
  int32 code = 1;
  repeated PAttendanceRecord data = 2;
}

message PGetTotalWorkingDayInMonthRequest {
  int64 employee_id = 1;
  int32 month = 2;
  int32 year = 3;
}

message PGetTotalWorkingDayInMonthResponse {
  message Data {
    int32 total_day_of_month = 1;
    double current_system_total_day_working = 2;
    double current_user_total_day_working = 3;
  }
  int32 code = 1;
  Data data = 2;
}

message PChangeStatusLeaveRequest {
  int64 id = 1;
  int64 employee_id = 2;
  string status = 3;
}

message PHolidayRecord {
  int64 id = 1;
  string name = 2;
  string type = 3;
  string date = 4;
  int64 date_year = 5;
  int64 date_month = 6;
  int64 date_day = 7;
  string week_day = 8;
}

message PListHolidays {
  repeated PHolidayRecord data = 1;
}

message PSearchHolidaysRequest {
  string dateFrom = 1;
  string dateTo = 2;
  string name = 3;
  string type = 4;
  int32 year = 5;
  int32 month = 6;
}

message PSearchHolidaysResponse {
  int32 code = 1;
  repeated PHolidayRecord data = 2;
}